# LinkedinBot

./: .env.example  .gitignore  README.md  justfile  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: bot.yml
config/: profile.json
src/: ai_advisor.py  auth.py  bot.py  database.py  matcher.py  notifier.py  scraper.py
